--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>To Do List</title>
 
-    <link rel="stylesheet" type="text/css" href="index.css">
-</head>
-<body>
-    <ul>
-        <li>Wash Cat</li>
-        <li>Feed Cat</li>
-        <li>Feed Cat to Doc</li>
-    </ul>
-    <script src="index.js"></script>
-</body>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+       
+        <!--CSS-->
+        <link rel="stylesheet" href="index.css"/>
+        <meta charset="utf-8"/>
+        <title>jQuery</title>
+    </head>
+    <body>
+        <div>Please don't fade me</div>
+        <div>I'm begging you, please!</div>
+        <div>Help help help</div>
+        <button>Click Me.</button>
+        <!--jQuery-->
+        <script
+            src="https://code.jquery.com/jquery-3.2.1.js"
+            integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+            crossorigin="anonymous"></script>
+        <!--JavaScript-->
+        <script type="text/javascript" href="index.js"></script>
+    </body>
 </html>
