--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <head>
-       
+        <!--jQuery-->
+        <script type="text/javascript" src="assests/js/lib/jquery-3.2.1.js"</script>
         <!--CSS-->
         <link rel="stylesheet" href="index.css"/>
         <meta charset="utf-8"/>
@@ -13,12 +14,7 @@
         <div>I'm begging you, please!</div>
         <div>Help help help</div>
         <button>Click Me.</button>
-        <!--jQuery-->
-        <script
-            src="https://code.jquery.com/jquery-3.2.1.js"
-            integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-            crossorigin="anonymous"></script>
         <!--JavaScript-->
-        <script type="text/javascript" href="index.js"></script>
+        <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
