--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <!--jQuery-->
-        <script type="text/javascript" src="assests/js/lib/jquery-3.2.1.js"</script>
+        <script type="text/javascript" src="assests/js/lib/jquery-3.2.1.js"></script>
         <!--CSS-->
-        <link rel="stylesheet" href="index.css"/>
+        <link rel="stylesheet" href="assests/css/index.css"/>
         <meta charset="utf-8"/>
         <title>jQuery</title>
     </head>
@@ -15,6 +15,6 @@
         <div>Help help help</div>
         <button>Click Me.</button>
         <!--JavaScript-->
-        <script type="text/javascript" src="index.js"></script>
+        <script type="text/javascript" src="assests/js/index.js"></script>
     </body>
 </html>
