--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
     <head>
         <!--jQuery-->
         <script type="text/javascript" src="assests/js/lib/jquery-3.2.1.js"></script>
+        <!--Fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
         <!--CSS-->
         <link rel="stylesheet" href="assests/css/index.css"/>
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <meta charset="utf-8"/>
-        <title>jQuery</title>
+        <title>To-Do List</title>
     </head>
     <body>
-        <div>Please don't fade me</div>
-        <div>I'm begging you, please!</div>
-        <div>Help help help</div>
-        <button>Click Me.</button>
+        <div id="container">
+            <h1>To-Do List <i class="fa fa-plus"></i></h1>
+            <input type="text" placeholder="Add New Todo..."/>
+            <ul>
+                <li><span><i class="fa fa-trash"></i></span> Go to Potions Class</li>
+                <li><span><i class="fa fa-trash"></i></span> Buy New Robes</li>
+                <li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
+            </ul>
+        </div>
         <!--JavaScript-->
         <script type="text/javascript" src="assests/js/index.js"></script>
     </body>
