--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div id="container">
             <h1>To-Do List <i class="fa fa-plus"></i></h1>
-            <input type="text" placeholder="Add New Todo..."/>
+            <input type="text" placeholder="Add New Item and press 'Enter' to add to list."/>
             <ul>
              
             </ul>
